--- a/Forcast_MVVM/app/build.gradle
+++ b/Forcast_MVVM/app/build.gradle
@@ -9,6 +9,10 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
 
 android {
+    compileOptions{
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
